# idempotent-create

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: CI.yml
src/: error.rs  ikey.rs  lib.rs  main.rs  obs.rs  server.rs  service.rs  user.rs
src/middleware/: ikey.rs  mod.rs
src/middleware/cache/: error.rs  handle.rs  manager.rs  mod.rs  msg.rs
src/routes/: create.rs  get.rs  list.rs  mod.rs
src/warehouse/: cache.rs  db.rs  mod.rs
tests/api/: create_user.rs  get_users.rs  main.rs  test_app.rs
tests/api/snapshots/: api__create_user__duplicate_request_with_key_is_201-2.snap  api__create_user__duplicate_request_with_key_is_201.snap  api__create_user__duplicate_request_without_key_is_409-2.snap  api__create_user__duplicate_request_without_key_is_409.snap  api__create_user__new_user.snap  api__get_users__empty_users.snap  api__get_users__with_some_users.snap
