[package]
name = "icapi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"


[dependencies]

# Web Framework
axum = { version = "0.6.18", features = ["tracing"] }

# Async Runtime
tokio = { version = "1.28.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }

# Middleware
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }

# Data De & Ser
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

# Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

# Errors
color-eyre = "0.6.2"
tracing-error = "0.2.0"
thiserror = "1.0.40"

[dev-dependencies]
insta = { version = "1.29.0", features = ["yaml", "json"] }

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
